--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<html><head><title>Redirecting...</title><script>window.location.replace("https://poggit.pmmp.io");</script></head><body><h1>Redirecting...</h1></body></html>
+<html>
+    <head>
+        <title>Redirecting...</title>
+        <script>window.location.replace("https://poggit.pmmp.io");</script>
+        <noscript>
+            <meta http-equiv="refresh" content="0; url=https://poggit.pmmp.io">
+        </noscript>
+    </head>
+    <body>
+        <h1>Redirecting...</h1>
+    </body>
+</html>
