--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <html>
     <head>
         <title>Redirecting...</title>
-        <script>window.location.replace("https://poggit.pmmp.io");</script>
+        <!--<script>window.location.replace("https://poggit.pmmp.io");</script>
         <noscript>
             <meta http-equiv="refresh" content="0; url=https://poggit.pmmp.io">
-        </noscript>
+        </noscript>-->
     </head>
     <body>
-        <h1>Redirecting...</h1>
+        <!--<h1>Redirecting...</h1>-->
+        Poggit is currently down due to technical issues on the server.
+        As we have no offsite backup,
+        the server cannot be resumed until 2023-03-01.
     </body>
 </html>
