Changed the page title from Redirecting

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <title>Redirecting...</title>
+        <!--<title>Redirecting...</title>-->
+        <title>Notice</title>
         <!--<script>window.location.replace("https://poggit.pmmp.io");</script>
         <noscript>
             <meta http-equiv="refresh" content="0; url=https://poggit.pmmp.io">
