--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
-<html>
-    <head>
-        <!--<title>Redirecting...</title>-->
-        <title>Notice</title>
-        <!--<script>window.location.replace("https://poggit.pmmp.io");</script>
-        <noscript>
-            <meta http-equiv="refresh" content="0; url=https://poggit.pmmp.io">
-        </noscript>-->
-    </head>
-    <body>
-        <!--<h1>Redirecting...</h1>-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Notice</title>
+    <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+<div class="main">
+    <h1>
+        Technical Issues
+    </h1>
+    <hr>
+    <p>
         Poggit is currently down due to technical issues on the server.
-        As we have no offsite backup,
-        the server cannot be resumed until 2023-03-01.
-    </body>
+    </p>
+    <p>
+        As we have no offsite backup, the server cannot be resumed until 2023-03-01.
+    </p>
+    <div class="icon-container">
+        <a href="https://discord.gg/XDugAkJ">
+            <img src="img/Discord.png" alt="Discord server">
+        </a>
+        <a href="https://pmmp.io">
+            <img src="img/logo.png" alt="PocketMine-MP documentation">
+        </a>
+        <a href="https://github.com/poggit">
+            <img src="img/GitHub.png" alt="GitHub Org.">
+        </a>
+    </div>
+</div>
+</body>
 </html>
