--- a/404.html
+++ b/404.html
@@ -1,10 +1,23 @@
-<html>
-    <head>
-        <title>Notice</title>
-    </head>
-    <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Notice</title>
+    <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+<div class="main">
+    <h1>
+        Technical Issues
+    </h1>
+    <hr>
+    <p>
         Poggit is currently down due to technical issues on the server.
-        As we have no offsite backup,
-        the server cannot be resumed until 2023-03-01.
-    </body>
+    </p>
+    <p>
+        As we have no offsite backup, the server cannot be resumed until 2023-03-01.
+    </p>
+</div>
+</body>
 </html>
